--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,3 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem "sqlite3"
-#
-default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
-
-development:
-  <<: *default
-  database: storage/development.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: storage/test.sqlite3
-
 # PostgreSQL. Versions 9.3 and up are supported.
 #
 # Install the pg driver:
@@ -29,11 +7,34 @@ test:
 #
 # Configure Using Gemfile
 # gem "pg"
+#
+
+default: &default
+  adapter: postgresql
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
+
+development:
+  host: localhost
+  database: collects_dev
+  username: thor
+  password: ''
+  <<: *default
+
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
+test:
+  host: localhost
+  database: collects_test
+  username: collects-pg-test
+  password: <%= ENV['COLLECTS_TEST_DATABASE_PASSWORD'] %>
+  <<: *default
+
 
 # Only on DigitalOcean, not on my local!
 production:
   <<: *default
-  adapter: postgresql
   host: localhost
   database: collects_production
   username: collects-pg
